Updating stable version. Load testing modeshape.